Initial portfolio website setup.

--- a/gorank.ca/public/index.html
+++ b/gorank.ca/public/index.html
@@ -9,15 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta property="og:title" content="Sohini Mukherjee">
-    <meta property="og:description" content="Portfolio website">
-    <meta property="og:image" content="%PUBLIC_URL%/icon.png">
-    <meta property="og:url" content="https://sohinimukherjee.com">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
-    <!-- Site verification -->
-    <meta name="google-site-verification" content="Ku9k2ky5JgzgvAwSnRCxJz4TR69xDv4csH2BBdWDNJI" />
-    <meta name="p:domain_verify" content="93ad9270189e29f769a487c83250faae"/>
-    <meta name="yandex-verification" content="0866f5b1462567a0" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -32,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sohini Mukherjee</title>
+    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
